--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,5 @@
 <div class = "w3-container">
+    <app-search></app-search>
     <div class = "w3-row-padding">
         <div class = "w3-quarter">
             <div class="gs-card">
@@ -10,7 +11,7 @@
             <div class = "w3-row">
                 <div class = "w3-half">
                     <div class="gs-card">
-                        <p>Hello There</p>
+                        <p>{{repo.name}}</p>
                     </div>
                 </div>
             </div>    
