--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div id="main">
+    <div class="fof">
+            <h1>404</h1>
+            <p>Page Not Found</p>
+    </div>
+</div>
