--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,12 +1,25 @@
-<div class = "w3-container w3-margin-top" style= "width:40%; margin:auto">
+<div class = "w3-container w3-margin-top gs-search-container" style= "width:40%; margin:auto">
     <div class = "w3-row-padding">
-        <form>
+        <form (ngSubmit) = "searchGitUser()">
             <div class = "w3-padding-w3-margin-top">
-                <input class = "w3-input" placeholder = "Search By User">
+                <input class = "w3-input" placeholder = "Search By User" style = "outline:none" [(ngModel)]="query" name = "query" required>
             </div>
             <div class = "w3-margin-top">
-                <button class = "w3-button w3-grey w3-right">SEARCH</button>
+                <button class = "w3-button w3-grey w3-right" type="submit">SEARCH</button>
             </div>
         </form>
     </div>
+</div>
+
 <div>
+    <div class = "w3-container">
+        <div class = "w3-row">
+            <div class = "">
+                <div class="gs-card" *ngFor = "let user of users;let i = index" style = "max-width:200px;">
+                    <img src={{user.avatar_url}} alt="Avatar" style="width:100%">
+                    <p><a href={{user.html_url}} target = "_blank"><i class="fa fa-github"></i></a>&emsp;{{user.login}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
