--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class = "w3-container">
     <app-search></app-search>
-    <div class = "w3-row-padding">
+    <div class = "w3-row-padding w3-margin-top">
         <div class = "w3-quarter">
             <div class="gs-card">
                 <img src={{user.avatarUrl}} alt="Avatar" style="width:100%">
