--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -17,7 +17,7 @@
             <div class = "w3-quarter" *ngFor = "let user of users;let i = index">
                 <div class="gs-card" style = "max-width:200px;">
                     <img src={{user.avatar_url}} alt="Avatar" style="width:100%">
-                    <p><a href={{user.html_url}} target = "_blank"><i class="fa fa-github"></i></a>&emsp;{{user.login}}</p>
+                    <p><a routerLink="/user/{{user.login}}" target = "_blank"><i class="fa fa-github"></i></a>&emsp;{{user.login}}</p>
                 </div>
             </div>
         </div>
